[package]
name = "multikast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
socket2 = "0.5.1"
tokio = { version = "1.26.0", features = ["net", "macros", "rt", "io-std", "io-util"] }
